--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.15.10",
+    "@theatre/core": "^0.7.0",
+    "@theatre/r3f": "^0.7.0",
+    "@theatre/studio": "^0.7.0",
+    "axios": "^1.6.1",
     "framer-motion": "^10.16.4",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
