--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.15.10",
+    "@reduxjs/toolkit": "^1.9.7",
     "@theatre/core": "^0.7.0",
     "@theatre/r3f": "^0.7.0",
     "@theatre/studio": "^0.7.0",
     "axios": "^1.6.1",
     "framer-motion": "^10.16.4",
+    "install": "^0.13.0",
+    "npm": "^10.2.3",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.1",
     "three": "^0.158.0"
