--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1",
     "three": "^0.158.0"
   },
